[gd_scene load_steps=6 format=2]

[ext_resource path="res://Module/ModuleScript/AndGate2.gd" type="Script" id=1]
[ext_resource path="res://Pin/Pin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/ModuleBackground/AndGate2.png" type="Texture" id=3]
[ext_resource path="res://Assets/LED/SingleLED.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[node name="AndGate2" type="Node2D"]
script = ExtResource( 1 )
PinBoarder = 3

[node name="Pin_A" parent="." instance=ExtResource( 2 )]
position = Vector2( 8, 0 )

[node name="Pin_B" parent="." instance=ExtResource( 2 )]
position = Vector2( 24, 0 )

[node name="Pin_R" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 48 )
rotation = 3.14159

[node name="AndGate2BG" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="SingleLED_A" parent="AndGate2BG" instance=ExtResource( 4 )]
position = Vector2( 8, 6 )
animation = "Mini"

[node name="SingleLED_B" parent="AndGate2BG" instance=ExtResource( 4 )]
position = Vector2( 24, 6 )
animation = "Mini"

[node name="SingleLED_R" parent="AndGate2BG" instance=ExtResource( 4 )]
position = Vector2( 16, 42 )
animation = "Mini"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 24 )
shape = SubResource( 1 )
